--- a/styles/styles.css
+++ b/styles/styles.css
@@ -177,8 +177,88 @@ body {
   }
 
   .user-nav-button:active {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.3);
   }
 
   /* Footer */
 
+.page-footer-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.footer-social {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 200px;
+  list-style: none;
+  padding-top: 45px;
+  padding-bottom: 50px;
+}
+
+.footer-social-item + .footer-social-item  {
+  margin-left: 26px;
+}
+
+.footer-social-link {
+  display: block;
+  padding: 5px;
+}
+
+.footer-social-icon {
+  vertical-align: middle;
+  fill: rgb(131, 179, 211);
+  transition: fill 0.3s;
+}
+
+.footer-social-link:hover .footer-social-icon,
+.footer-social-link:focus .footer-social-icon {
+  fill: rgb(104, 162, 202);
+}
+
+.footer-social-link:active .footer-social-icon {
+  fill: rgba(104, 162, 202, 0.3);
+}
+
+.footer-contact-phone {
+  font-size: 40px;
+  line-height: 40px;
+  font-weight: 400;
+  text-decoration: none;
+  margin-left: auto;
+  color: inherit;
+  transition: color 0.3s;
+}
+
+.footer-contact-phone:hover,
+.footer-contact-phone:focus {
+  color: rgb(117, 97, 87)
+}
+
+.footer-contact-phone:active {
+  color: rgba(117, 97, 87, 0.3)
+}
+
+.logo-htmlacademy {
+  width: 115px;
+  flex-shrink: 0;
+  margin-left: auto;
+}
+
+.logo-htmlacademy-img {
+  display: block;
+  fill: #000;
+  transition: fill 0.3s;
+}
+
+.logo-htmlacademy:hover .logo-htmlacademy-img,
+.logo-htmlacademy:focus .logo-htmlacademy-img {
+  fill: rgb(117, 97, 87);
+}
+
+.logo-htmlacademy:active .logo-htmlacademy-img {
+  fill: rgba(117, 97, 87, 0.3)
+}
