--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,9 +68,11 @@ body {
   .page-nav {
     display: flex;
     align-items: center;
+    position: relative;
   }
 
   .logo {
+    
     width: 139px;
     flex-shrink: 0;
     margin-right: 30px;
@@ -113,7 +115,7 @@ body {
     position: absolute;
     height: 2px;
     background-color: rgb(117, 98, 87);
-    bottom: -5px;
+    bottom: -6px;
     right: 12px;
     left: 12px;
   }
@@ -190,6 +192,7 @@ body {
     padding-top: 51px;
     padding-bottom: 82px;
     background-image: url(/img/welcome-background.jpg);
+    background-color: grey;
     background-repeat: no-repeat;
     background-size: 1200px 485px;
     background-position: center;
@@ -353,6 +356,58 @@ body {
   .advantages-item-souvenir {
     background-color: rgba(131, 179, 211, 0.12)
   }
+
+  /* Search */
+
+  .search {
+    padding-top: 91px;
+    padding-bottom: 93px;
+  }
+
+  .search-title {
+    margin: 0;
+    margin-bottom: 29px;
+    line-height: 36px;
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    text-transform: uppercase;
+  }
+
+  .search-description {
+    margin: 0;
+    margin-bottom: 56px;
+    line-height: 26px;
+    font-size: 22px;
+    font-weight: 400;
+    text-align: center;
+  }
+
+  .search-button {
+    display: block;
+    margin: 0 auto;
+    padding: 12px 0;
+    width: 575px;
+    text-decoration: none;
+    line-height: 36px;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    color: #fff;
+    background-color: #756157;
+    border-radius: 5px;
+    text-transform: uppercase;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+.search-button:hover,
+.search-button:focus {
+  background-color: rgb(97, 80, 72);
+}
+
+.search-button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
 
   /* Footer */
 
