--- a/styles/styles.css
+++ b/styles/styles.css
@@ -581,7 +581,7 @@ img {
 /* Catalog */
 
 .hotel {
-  padding: 65px 0;
+  padding-top: 65px;
 }
 
 .hotel-list {
@@ -591,6 +591,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   margin-right: -20px;
+  margin-bottom: 66px;
 }
 
 .hotel-item {
@@ -734,4 +735,44 @@ img {
   text-align: center;
   text-transform: uppercase;
   border-radius: 3px;
+}
+
+/* Pagination */
+
+.pagination-container {
+  padding: 30px 0;
+  border-top: 1px solid #E6E6E6
+}
+
+.pagination {
+  padding: 0;
+  display: flex;
+  margin: 0;
+  list-style: none;
+}
+
+.pagination-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.pagination-link {
+  display: block;
+  padding-top: 9px;
+  padding-bottom: 10px;
+  box-sizing: border-box;
+  width: 55px;
+  height: 55px;
+  line-height: 36px;
+  font-size: 20px;
+  font-weight: 700;
+  border-radius: 5px;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+  background-color: #82B3D3;
+}
+
+.pagination-current {
+  color: #000;
+  background-color: #F2F2F2;
 }
