--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,6 +131,10 @@ img {
   list-style: none;
 }
 
+.user-nav-item {
+  position: relative;
+}
+
 .user-nav-item+.user-nav-item {
   margin-left: 13px;
 }
@@ -144,7 +148,7 @@ img {
   width: 19px;
   height: 19px;
   padding: 5px;
-  background-image: url(/img/search.svg);
+  background-image: url(../img/search.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -154,9 +158,25 @@ img {
   width: 19px;
   height: 17px;
   padding: 5px;
-  background-image: url(/img/favorite.svg);
+  background-image: url(../img/favorite.svg);
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.user-nav-favorite::after {
+  content: "12";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  color: #fff;
+  text-align: center;
+  top: -3px;
+  right: -10px;
+  line-height: 20px;
+  font-size: 10px;
+  font-weight: 400;
+  background-color: #7DB54F;
 }
 
 .user-nav-button {
@@ -192,10 +212,10 @@ img {
 .welcome {
   padding-top: 51px;
   padding-bottom: 82px;
-  background-image: url(/img/welcome-background.jpg);
+  background-image: url(../img/welcome-background.jpg);
   background-color: grey;
   background-repeat: no-repeat;
-  background-size: 1200px 485px;
+  background-size: cover;
   background-position: center;
   box-sizing: border-box;
   text-align: center;
@@ -329,27 +349,24 @@ img {
 .advantages-icon-living {
   height: 75px;
   margin-bottom: 30px;
-  background-image: url(/img/icon-house.svg);
+  background-image: url(../img/icon-house.svg);
   background-repeat: no-repeat;
-  background-size: 78px 75px;
   background-position: center;
 }
 
 .advantages-icon-food {
   height: 75px;
   margin-bottom: 30px;
-  background-image: url(/img/icon-food.svg);
+  background-image: url(../img/icon-food.svg);
   background-repeat: no-repeat;
-  background-size: 80px 75px;
   background-position: center;
 }
 
 .advantages-icon-souvenir {
   height: 75px;
   margin-bottom: 30px;
-  background-image: url(/img/icon-souvenir.svg);
+  background-image: url(../img/icon-souvenir.svg);
   background-repeat: no-repeat;
-  background-size: 63px 75px;
   background-position: center;
 }
 
@@ -417,10 +434,10 @@ img {
 }
 
 .signup-index {
-  background-image: url(/img/signup-background.jpg);
+  background-image: url(../img/signup-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 1200px 411px;
+  background-size: cover;
   background-color: #000;
 }
 
@@ -459,7 +476,8 @@ img {
 .signup-newsletter-field {
   border: 0;
   width: 600px;
-  padding: 20px 22px 19px 22px;
+  padding: 23px 22px 16px 18px;
+  box-sizing: border-box;
   line-height: 21px;
   font-size: 18px;
   font-weight: 400;
@@ -474,7 +492,7 @@ img {
 .signup-newsletter-button {
   border: 0;
   width: 200px;
-  padding: 12px 0;
+  padding: 12px 15px;
   line-height: 36px;
   font-size: 20px;
   font-weight: 700;
@@ -504,16 +522,17 @@ img {
 
 .footer-social {
   margin: 0;
+  margin-left: -3px;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-top: -15px;
+  margin-top: -9px;
   list-style: none;
 }
 
 .footer-social-item+.footer-social-item {
-  margin-left: 26px;
+  margin-left: 16px;
 }
 
 .footer-social-link {
@@ -542,7 +561,8 @@ img {
   line-height: 40px;
   font-weight: 400;
   text-decoration: none;
-  margin-left: auto;
+  margin-top: 11px;
+  margin-left: 242px;
   color: inherit;
   transition: color 0.3s;
 }
@@ -560,7 +580,8 @@ img {
   width: 115px;
   flex-shrink: 0;
   margin-left: auto;
-  margin-top: -10px;
+  margin-top: 2px;
+  margin-right: 2px;
 }
 
 .logo-htmlacademy-img {
@@ -581,9 +602,9 @@ img {
 /* Filter */
 
 .filter {
-  background-image: url(/img/filter-bg.jpg);
+  background-image: url(../img/filter-bg.jpg);
   background-repeat: no-repeat;
-  background-size: 1200px 393px;
+  background-size: cover;
   background-color: #000;
   padding-top: 35px;
   padding-bottom: 70px;
@@ -628,10 +649,10 @@ img {
   height: 9px;
   top: 6px;
   left: -16px;
-  background-image: url(/img/breadcrumbs-arrow.svg);
+  background-image: url(../img/breadcrumbs-arrow.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 6px 9px;
+  background-size: cover;
   opacity: 0.3;
 }
 
@@ -725,10 +746,10 @@ img {
   left: 25%;
   width: 13px;
   height: 10px;
-  background-image: url(/img/tick.svg);
+  background-image: url(../img/tick.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 13px 10px;
+  background-size: cover;
 }
 
 .control-label {
@@ -737,7 +758,117 @@ img {
   font-weight: 400;
 }
 
+.filter-group-third {
+  margin-left: auto;
+  width: 288px;
+}
 
+.filter-price {
+  display: flex;
+}
+
+.filter-price-from {
+  position: relative;
+}
+
+.filter-price-from label {
+  position: absolute;
+  right: 17px;
+  top: 25%;
+  line-height: 21px;
+  font-size: 18px;
+  font-weight: 400;
+  opacity: 0.3;
+}
+
+.filter-price-from input {
+  background-color: transparent;
+  width: 144px;
+  color: #fff;
+  line-height: 21px;
+  font-size: 18px;
+  font-weight: 400;
+  padding-top: 12px;
+  padding-bottom: 11px;
+  padding-left: 17px;
+  border: 2px solid #fff;
+  border-right: 1px solid #fff;
+  border-radius: 4px 0 0 4px;
+  box-sizing: border-box;
+}
+
+.filter-price-to {
+  position: relative;
+}
+
+.filter-price-to label {
+  position: absolute;
+  right: 17px;
+  top: 25%;
+  line-height: 21px;
+  font-size: 18px;
+  font-weight: 400;
+  opacity: 0.3;
+}
+
+.filter-price-to input {
+  background-color: transparent;
+  width: 144px;
+  color: #fff;
+  line-height: 21px;
+  font-size: 18px;
+  font-weight: 400;
+  padding-top: 12px;
+  padding-bottom: 11px;
+  padding-left: 17px;
+  border: 2px solid #fff;
+  border-left: 1px solid #fff;
+  border-radius: 0 4px 4px 0;
+  box-sizing: border-box;
+}
+
+.range-scale {
+  margin-top: 32px;
+  position: relative;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 2px;
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  opacity: 1;
+  background-color: #FFFFFF;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.range-toggle:focus {
+  border: 3px solid #83B3D3;
+}
+
+.range-toggle:active {
+  border: 2px solid #83B3D3;
+}
+
+.toggle-min {
+  top: -8px;
+  left: -10px;
+}
+
+.toggle-max {
+  top: -8px;
+  right: -10px;
+}
 
 .filter-button {
   margin-left: 70px;
@@ -843,7 +974,7 @@ img {
   color: rgb(51, 51, 51);
   border: 2px solid rgb(229, 229, 229);
   border-radius: 5px;
-  background-image: url(/img/select-arrow.svg);
+  background-image: url(../img/select-arrow.svg);
   background-color: #fff;
   background-repeat: no-repeat;
   background-position: right 21px center;
@@ -1109,7 +1240,7 @@ img {
   width: 98px;
   box-sizing: content-box;
   background-color: #fff;
-  background-image: url(/img/select-arrow.svg);
+  background-image: url(../img/select-arrow.svg);
   background-repeat: no-repeat;
   background-position: right 21px center;
   appearance: none;
