--- a/styles/styles.css
+++ b/styles/styles.css
@@ -295,9 +295,6 @@ img {
 .advantages-item-img {
   width: 800px;
   background-color: grey;
-}
-
-.advantages-item-img img {
   display: block;
 }
 
@@ -340,34 +337,26 @@ img {
   display: flex;
   flex-direction: column;
   padding: 78px 85px;
+  padding-top: 183px;
 }
 
-.advantages-item-icon {
-  order: -1;
-}
-
-.advantages-icon-living {
-  height: 75px;
-  margin-bottom: 30px;
+.advantages-item-living {
   background-image: url(../img/icon-house.svg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 50% 26%;
+
 }
 
-.advantages-icon-food {
-  height: 75px;
-  margin-bottom: 30px;
+.advantages-item-food {
   background-image: url(../img/icon-food.svg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 50% 26%;
 }
 
-.advantages-icon-souvenir {
-  height: 75px;
-  margin-bottom: 30px;
+.advantages-item-souvenir {
   background-image: url(../img/icon-souvenir.svg);
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: 50% 26%;
 }
 
 .advantages-item-living,
@@ -492,8 +481,8 @@ img {
 .signup-newsletter-button {
   font-family: "PT Sans", sans-serif;
   border: 0;
-  width: 200px;
-  padding: 12px 15px;
+  /* width: 200px; */
+  padding: 12px 34px;
   line-height: 36px;
   font-size: 20px;
   font-weight: 700;
@@ -518,7 +507,7 @@ img {
 .page-footer-wrapper {
   display: flex;
   align-items: center;
-  height: 120px;
+  min-height: 120px;
 }
 
 .footer-social {
@@ -554,6 +543,11 @@ img {
 
 .footer-social-link:active .footer-social-icon {
   fill: rgba(104, 162, 202, 0.3);
+}
+
+.footer-contact {
+  display: flex;
+  flex-direction: column;
 }
 
 .footer-contact-phone {
@@ -1185,7 +1179,8 @@ img {
 /* Pagination */
 
 .pagination-container {
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 22px;
   border-top: 1px solid #E6E6E6;
   display: flex;
   align-items: center;
@@ -1194,8 +1189,13 @@ img {
 .pagination {
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   list-style: none;
+}
+
+.pagination-item {
+  margin-bottom: 8px;
 }
 
 .pagination-item:not(:last-child) {
