--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1258,3 +1258,347 @@ img {
   border-color: rgba(230, 230, 230, 1);
   color: rgba(230, 230, 230, 1);
 }
+
+/* Popup */
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 70px;
+  padding-top: 62px;
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+  width: 715px;
+  box-sizing: border-box;
+}
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  top: 54px;
+  right: 70px;
+  width: 53px;
+  height: 53px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.modal-close-cross {
+  fill: #000;
+}
+
+.modal-close-button:hover {
+  background-color: #E6E6E6;
+}
+
+.modal-close-button:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.modal-title {
+  margin: 0;
+  line-height: 36px;
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 63px;
+  text-transform: uppercase;
+}
+
+.field-group {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* position: relative; */
+}
+
+.date-from,
+.date-to {
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 700;
+}
+
+.date-form-field {
+  width: 382px;
+  min-height: 50px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 400;
+  font: inherit;
+  color: #000000;
+  appearance: none;
+  padding: 0 19px;
+  background-image: url("../img/modal-calendar.svg");
+  background-repeat: no-repeat;
+  background-position: right 17px center;
+}
+
+.date-form-field:hover {
+  background-color: #E6E6E6;
+}
+
+.date-form-field:focus {
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.date-form-field:active {
+  background-color: #ffffff;
+  outline: 2px solid #000000;
+}
+
+.date-form-field::placeholder {
+  color: #000;
+}
+
+.modal-message-warning,
+.modal-message {
+  font-size: 16px;
+  line-height: 21px;
+  display: flex;
+  width: 420px;
+  margin-left: auto;
+  min-height: 29px;
+  align-items: flex-end;
+  margin-bottom: 11px;
+}
+
+.modal-message-warning {
+  color: rgba(255, 87, 87, 1);
+}
+
+.human-counter-form-field {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.human-counter-adult,
+.human-counter-children {
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 700;
+}
+
+.human-counter-adult {
+  margin-right: 64px;
+  position: relative;
+}
+
+.human-counter-children {
+  padding-right: 43px;
+  width: 54px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.human-counter-button {
+  position: absolute;
+  padding: 0;
+  width: 25px;
+  height: 25px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+.modal-counter-icon {
+  display: block;
+  margin: 0 auto;
+  fill: rgba(0, 0, 0, 0.3);
+}
+
+.human-counter-button:hover .modal-counter-icon {
+  fill: rgba(0, 0, 0, 1);
+}
+
+.human-counter-button:focus {
+  outline: none;
+  box-shadow: inset 0 0 0 3px #83B3D3;
+}
+
+.human-counter-button:focus .modal-counter-icon {
+  fill: #000000;
+}
+
+.human-counter-button:active .modal-counter-icon {
+  fill: rgba(0, 0, 0, 0.2);
+}
+
+.minus-adults {
+  top: 355px;
+  left: 235px;
+  z-index: 1;
+  background-color: transparent;
+}
+
+.plus-adults {
+  top: 355px;
+  left: 320px;
+  z-index: 1;
+  background-color: transparent;
+}
+
+.minus-children {
+  top: 355px;
+  right: 170px;
+  z-index: 1;
+  background-color: transparent;
+}
+
+.plus-children {
+  top: 355px;
+  right: 85px;
+  z-index: 1;
+  background-color: transparent;
+}
+
+.human-counter-form-field {
+  width: 382px;
+  min-height: 50px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 400;
+  font: inherit;
+  color: #000000;
+  appearance: none;
+  position: relative;
+}
+
+.human-counter-form-field:nth-of-type(1) {
+  margin-right: 56px;
+}
+
+.human-counter-form-field::placeholder {
+  color: #000000;
+}
+
+.human-counter-form-field::-webkit-outer-spin-button,
+.human-counter-form-field::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+
+.human-counter-form-field[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.human-counter-form-field {
+  width: 133px;
+  text-align: center;
+}
+
+.modal-search-button {
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: #83B3D3;
+  width: 100%;
+  height: 60px;
+  padding: 12px 0 12px;
+  text-align: center;
+  border-radius: 10px;
+  margin-top: 40px;
+  border: none;
+}
+
+.modal-search-button:hover {
+  background-color: #68A2CA;
+}
+
+.modal-search-button:focus {
+  outline: 3px solid #756257;
+}
+
+.modal-search-button:active {
+  outline: none;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.tooltip-toggle {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  top: 12px;
+  right: 18px;
+  display: block;
+  position: absolute;
+}
+
+.tooltip-icon {
+  width: 100%;
+  height: 100%;
+  display: block;
+  fill: #83B3D3;
+}
+
+.tooltip-toggle:hover .tooltip-icon {
+  fill: #68A2CA;
+  cursor: pointer;
+}
+
+.tooltip-text {
+  background-color: #333333;
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+  text-transform: none;
+  padding: 15px 18px 18px 22px;
+  width: 216px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  position: absolute;
+  top: 50px;
+  left: -62px;
+  z-index: 1;
+  display: none;
+}
+
+.tooltip-toggle:hover+.tooltip-text,
+.tooltip-toggle:focus+.tooltip-text {
+  display: block;
+}
+
+.tooltip-text:after {
+  content: '';
+  background-image: url("../img/tooltip-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 9px;
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
